# HOG-object-detection

./: CMakeLists.txt  README.md  train_HOG.cpp
eggs-test-result/: README.md
q204385/: my_detector.yml  readme.md
